# test-company-sdk

./: CMakeLists.txt  west.yml
include/: modem_core.h
